MSE: Support for extracting rotation from MP4 videos

The MP4 spec specifies a matrix stored in both the movie header as well
as individual track headers. A final matrix is created by composing and
transforming a track header with the movie header. A rotation value can
be extracted from this final matrix. This is defined in ISO-14496-12.

Bug: 830575
Change-Id: If788e4492a082096b36796a3cbf22105a4d57d3f
Reviewed-on: https://chromium-review.googlesource.com/1006177
Commit-Queue: Matthew Wolenetz <wolenetz@chromium.org>
Reviewed-by: Matthew Wolenetz <wolenetz@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551400}
Former-commit-id: 01b29f3e6a7d4109b4fe6756e643585c782882be