media/formats/mp4/box_reader.h
@@ -24,6 +24,14 @@
 namespace media {
 namespace mp4 {
 
+enum DisplayMatrixSize {
+  kDisplayMatrixWidth = 3,
+  kDisplayMatrixHeight = 3,
+  kDisplayMatrixDimension = kDisplayMatrixHeight * kDisplayMatrixWidth
+};
+
+using DisplayMatrix = int32_t[kDisplayMatrixDimension];
+
 class BoxReader;
 
 struct MEDIA_EXPORT Box {
@@ -144,6 +152,10 @@ class MEDIA_EXPORT BoxReader : public BufferReader {
   // Read one child if available. Returns false on error, true on successful
   // read or on child absent.
   bool MaybeReadChild(Box* child) WARN_UNUSED_RESULT;
+
+  // ISO-BMFF streams files use a 3x3 matrix consisting of 6 16.16 fixed point
+  // decimals and 3 2.30 fixed point decimals.
+  bool ReadDisplayMatrix(DisplayMatrix matrix);
 
   // Read at least one child. False means error or no such child present.
   template<typename T> bool ReadChildren(
